Resolution d'un bug sur les scrollbars horizontales.

--- a/usr/share/css/themes/adwaita/gnome-shell/jquery.jscrollpane.css
+++ b/usr/share/css/themes/adwaita/gnome-shell/jquery.jscrollpane.css
@@ -20,6 +20,11 @@
 	position: absolute;
 }
 
+.jspVerticalBar,
+.jspHorizontalBar {
+	z-index: 1001;
+}
+
 .jspVerticalBar
 {
 	position: absolute;
@@ -95,7 +100,7 @@
 }
 
 .jspHorizontalBar .jspTrack,
-.jspHorizontalBar .jspDrag
+.jspHorizontalBar .jspDragContainer
 {
 	float: left;
 	height: 100%;
